# AdventOfCode2020

./: Cargo.toml
src/: 01_report_repair.rs  02_password_philosophy.rs  03_toboggan_trajectory.rs  04_passport_processing.rs  05_binary_boarding.rs  06_custom_customs.rs  07_handy_haversacks.rs  08_handheld_halting.rs  09_encoding_error.rs  10_adapter_array.rs  11_seating_system.rs  12_rain_risk.rs  13_shuttle_search.rs  14_docking_data.rs  15_rambunctious_recitation.rs
