[package]
name = "AdventOfCode2020"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
scan-rules = "0.2.0"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.4.2"

[[bin]]
name = "01_report_repair"
path = "src/01_report_repair.rs"

[[bin]]
name = "02_password_philosophy"
path = "src/02_password_philosophy.rs"


[[bin]]
name = "03_toboggan_trajectory"
path = "src/03_toboggan_trajectory.rs"

[[bin]]
name = "04_passport_processing"
path = "src/04_passport_processing.rs"

[[bin]]
name = "05_binary_boarding"
path = "src/05_binary_boarding.rs"

[[bin]]
name = "06_custom_customs"
path = "src/06_custom_customs.rs"