[package]
name = "AdventOfCode2020"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.4.2"
itertools = "0.9.0"

[dependencies.scan-rules]
version = "0.2.0"
features = ["regex"]


[[bin]]
name = "01_report_repair"
path = "src/01_report_repair.rs"

[[bin]]
name = "02_password_philosophy"
path = "src/02_password_philosophy.rs"


[[bin]]
name = "03_toboggan_trajectory"
path = "src/03_toboggan_trajectory.rs"

[[bin]]
name = "04_passport_processing"
path = "src/04_passport_processing.rs"

[[bin]]
name = "05_binary_boarding"
path = "src/05_binary_boarding.rs"

[[bin]]
name = "06_custom_customs"
path = "src/06_custom_customs.rs"

[[bin]]
name = "07_handy_haversacks"
path = "src/07_handy_haversacks.rs"

[[bin]]
name = "08_handheld_halting"
path = "src/08_handheld_halting.rs"

[[bin]]
name = "09_encoding_error"
path = "src/09_encoding_error.rs"

[[bin]]
name = "10_adapter_array"
path = "src/10_adapter_array.rs"